--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 	</head>
 
 <header class="header">
+
 	<div class="container head-design">
 				<a class="logo" href="./index.html">Web<span class="logo-black">Studio</span> </a>
 				<nav>
@@ -29,22 +30,30 @@
 				</nav>
 				<ul class="header-nav list">
 					<li class="nav-item">
-						<a href="mailto:info@devstudio.com" class="header-adres">info@devstudio.com</a>
+						<a href="mailto:info@devstudio.com" class="header-adres mail" >
+							<svg class="mail-icon" width="16" height="12">
+							<use href="./images/icons.svg#icon-mail"></use> 
+							</svg>
+						info@devstudio.com</a>
 					</li>
 					<li class="nav-item">
-						<a href="tel:+380961111111" class="header-adres">+38 096 111 11 11</a>
+						<a href="tel:+380961111111" class="header-adres tel">
+							<svg class="mail-icon" width="12" height="16">
+							<use href="./images/icons.svg#icon-smartphone"></use> 
+							</svg>
+							+38 096 111 11 11</a>
 					</li>
 				</ul>
 	</div>
 </header>
 
 			<main>
-
+	<div class="container-fluid">
 				<section class="section hero-section">
 			<div class="container con-hearo">	
 					<h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
 					<button type="button" class="button">Замовити послугу</button>
-			</div>				
+			</div>	</div>			
 		</section> 
 
 	
@@ -53,22 +62,46 @@
 					<h2 class="visually-hidden">Особливості</h2>
 					<ul class="original-list list">
 						<li class="original-item">
+							<div class="original-icon-fon"> 
+								<svg class="original-icon"> 
+									<use href="./images/icons.svg#icon-antenna">
+									</use>
+								</svg>
+							</div>
 							<h3 class="original-title">Увага до деталей</h3>
 							<p class="original-pretitle pretitle">
 								Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
 							</p>
 						</li>
 						<li class="original-item">
+							<div class="original-icon-fon"> 
+								<svg class="original-icon"> 
+									<use href="./images/icons.svg#icon-clock">
+									</use>
+								</svg>
+							</div>							
 							<h3 class="original-title">Пунктуальність</h3>
 							<p class="original-pretitle">
 								Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
 							</p>
 						</li>
 						<li class="original-item">
+							<div class="original-icon-fon"> 
+								<svg class="original-icon"> 
+									<use href="./images/icons.svg#icon-diagram">
+									</use>
+								</svg>
+							</div>							
 							<h3 class="original-title">Планування</h3>
 							<p class="original-pretitle">Так само консультація з широким активом значною мірою зумовлює.</p>
 						</li>
 						<li class="original-item">
+							<div class="original-icon-fon"> 
+								<svg class="original-icon"> 
+									<use href="./images/icons.svg#icon-astronaut">
+									</use>
+								</svg>
+							</div>							
 							<h3 class="original-title">Сучасні технології</h3>
 							<p class="original-pretitle">
 								Значимість цих проблем настільки очевидна, що реалізація планових завдань.
@@ -106,6 +139,40 @@
 						<div class="cont-fio">
 							<h3 class="fio">Ігор Дем'яненко</h3>
 							<p class="profesion" lang="en">Product Designer</p>
+							<ul class="com-soc list">
+								<li class="com-soc-item">
+									<a href="https://www.instagram.com/sysadmin.express/"  target="_blank" rel="noopener nofollow noreferrer" class="com-soc-link link">
+										<svg class="com-soc-icon">
+											<use href="./images/icons.svg#icon-instagram">
+											</use> 
+										</svg>
+									</a>
+								</li>
+								<li class="com-soc-item">
+									<a href="https://twitter.com"  target="_blank" rel="noopener nofollow noreferrer" class="com-soc-link link">
+										<svg class="com-soc-icon">
+											<use href="./images/icons.svg#icon-twitter">
+											</use> 
+										</svg>
+									</a>
+								</li>
+								<li class="com-soc-item">
+									<a href="https://www.facebook.com/SysAdmin.Express"  target="_blank" rel="noopener nofollow noreferrer" class="com-soc-link link">
+										<svg class="com-soc-icon">
+											<use href="./images/icons.svg#icon-facebook">
+											</use> 
+										</svg>
+									</a>
+								</li>
+								<li class="com-soc-item">
+									<a href="https://www.linkedin.com/in/yevheniia-bohdan-428a41236/"  target="_blank" rel="noopener nofollow noreferrer" class="com-soc-link link">
+										<svg class="com-soc-icon">
+											<use href="./images/icons.svg#icon-linkedin">
+											</use> 
+										</svg>
+									</a>
+								</li>
+							</ul>
 						</div>
 						</li>
 						<li class="foto-item-fio">
@@ -113,6 +180,40 @@
 						<div class="cont-fio">
 							<h3 class="fio">Ольга Рєпіна</h3>
 							<p class="profesion" lang="en">Frontend Developer</p>
+							<ul class="com-soc list">
+								<li class="com-soc-item">
+									<a href="https://www.instagram.com/sysadmin.express/"  target="_blank" rel="noopener nofollow noreferrer" class="com-soc-link link">
+										<svg class="com-soc-icon">
+											<use href="./images/icons.svg#icon-instagram">
+											</use> 
+										</svg>
+									</a>
+								</li>
+								<li class="com-soc-item">
+									<a href="https://twitter.com"  target="_blank" rel="noopener nofollow noreferrer" class="com-soc-link link">
+										<svg class="com-soc-icon">
+											<use href="./images/icons.svg#icon-twitter">
+											</use> 
+										</svg>
+									</a>
+								</li>
+								<li class="com-soc-item">
+									<a href="https://www.facebook.com/SysAdmin.Express"  target="_blank" rel="noopener nofollow noreferrer" class="com-soc-link link">
+										<svg class="com-soc-icon">
+											<use href="./images/icons.svg#icon-facebook">
+											</use> 
+										</svg>
+									</a>
+								</li>
+								<li class="com-soc-item">
+									<a href="https://www.linkedin.com/in/yevheniia-bohdan-428a41236/"  target="_blank" rel="noopener nofollow noreferrer" class="com-soc-link link">
+										<svg class="com-soc-icon">
+											<use href="./images/icons.svg#icon-linkedin">
+											</use> 
+										</svg>
+									</a>
+								</li>
+							</ul>							
 						</div>
 						</li>
 						<li class="foto-item-fio">
@@ -120,6 +221,40 @@
 						<div class="cont-fio">
 							<h3 class="fio">Микола Тарасов</h3>
 							<p class="profesion" lang="en">Marketing</p>
+							<ul class="com-soc list">
+								<li class="com-soc-item">
+									<a href="https://www.instagram.com/sysadmin.express/"  target="_blank" rel="noopener nofollow noreferrer" class="com-soc-link link">
+										<svg class="com-soc-icon">
+											<use href="./images/icons.svg#icon-instagram">
+											</use> 
+										</svg>
+									</a>
+								</li>
+								<li class="com-soc-item">
+									<a href="https://twitter.com"  target="_blank" rel="noopener nofollow noreferrer" class="com-soc-link link">
+										<svg class="com-soc-icon">
+											<use href="./images/icons.svg#icon-twitter">
+											</use> 
+										</svg>
+									</a>
+								</li>
+								<li class="com-soc-item">
+									<a href="https://www.facebook.com/SysAdmin.Express"  target="_blank" rel="noopener nofollow noreferrer" class="com-soc-link link">
+										<svg class="com-soc-icon">
+											<use href="./images/icons.svg#icon-facebook">
+											</use> 
+										</svg>
+									</a>
+								</li>
+								<li class="com-soc-item">
+									<a href="https://www.linkedin.com/in/yevheniia-bohdan-428a41236/"  target="_blank" rel="noopener nofollow noreferrer" class="com-soc-link link">
+										<svg class="com-soc-icon">
+											<use href="./images/icons.svg#icon-linkedin">
+											</use> 
+										</svg>
+									</a>
+								</li>
+							</ul>							
 						</div>
 						</li>
 						<li class="foto-item-fio">
@@ -127,6 +262,40 @@
 						<div class="cont-fio">
 							<h3 class="fio">Михайло Єрмаков</h3>
 							<p class="profesion" lang="en">UI Designer</p>
+							<ul class="com-soc list">
+								<li class="com-soc-item">
+									<a href="https://www.instagram.com/sysadmin.express/"  target="_blank" rel="noopener nofollow noreferrer" class="com-soc-link link">
+										<svg class="com-soc-icon">
+											<use href="./images/icons.svg#icon-instagram">
+											</use> 
+										</svg>
+									</a>
+								</li>
+								<li class="com-soc-item">
+									<a href="https://twitter.com"  target="_blank" rel="noopener nofollow noreferrer" class="com-soc-link link">
+										<svg class="com-soc-icon">
+											<use href="./images/icons.svg#icon-twitter">
+											</use> 
+										</svg>
+									</a>
+								</li>
+								<li class="com-soc-item">
+									<a href="https://www.facebook.com/SysAdmin.Express"  target="_blank" rel="noopener nofollow noreferrer" class="com-soc-link link">
+										<svg class="com-soc-icon">
+											<use href="./images/icons.svg#icon-facebook">
+											</use> 
+										</svg>
+									</a>
+								</li>
+								<li class="com-soc-item">
+									<a href="https://www.linkedin.com/in/yevheniia-bohdan-428a41236/"  target="_blank" rel="noopener nofollow noreferrer" class="com-soc-link link">
+										<svg class="com-soc-icon">
+											<use href="./images/icons.svg#icon-linkedin">
+											</use> 
+										</svg>
+									</a>
+								</li>
+							</ul>							
 						</div>
 						</li>
 					</ul>
@@ -134,8 +303,65 @@
 			</section>
 			</main>
 
+<section class="section clients">
+	<div class="container">
+	<h2 class="clients-title title">Постійні клієнти</h2>
+<ul class="clients-list list">
+<li class="clients-item">
+	<a href="" class="clients-link">
+	<svg class="clients-icon">
+		<use href="./images/icons.svg#icon-ya">
+		</use> 
+		</svg>
+	</a>
+</li>
+<li class="clients-item">
+	<a href="" class="clients-link">
+	<svg class="clients-icon">
+		<use href="./images/icons.svg#icon-co">
+		</use> 
+		</svg>
+	</a>
+</li>
+<li class="clients-item">
+	<a href="" class="clients-link">
+	<svg class="clients-icon">
+		<use href="./images/icons.svg#icon-company3">
+		</use> 
+		</svg>
+	</a>
+</li>
+<li class="clients-item">
+	<a href="" class="clients-link">
+	<svg class="clients-icon">
+		<use href="./images/icons.svg#icon-fp">
+		</use> 
+		</svg>
+	</a>
+</li>
+<li class="clients-item">
+	<a href="" class="clients-link">
+	<svg class="clients-icon">
+		<use href="./images/icons.svg#icon-brand">
+		</use> 
+		</svg>
+	</a>
+</li>
+<li class="clients-item">
+	<a href="" class="clients-link">
+	<svg class="clients-icon">
+		<use href="./images/icons.svg#icon-tag">
+		</use> 
+		</svg>
+	</a>
+</li>
+</ul>
+	</div>
+</section>
+
 <footer class="footer">
-					<div class=" container">		
+	<div class=" container">
+			<div class="footer-nav-content">
 					<a class="logo" href="./index.html">Web<span class="logo-white">Studio</span> </a>
 					<address>
 						<ul class="footer-adres list">
@@ -157,7 +383,46 @@
 							</li>
 						</ul>
 					</address>
-				</div>	
+			</div>
+			<div class="footer-sosial">
+				<h2 class="sosial-title">Приєднуйтесь</h2>
+<ul class="footer-soc list">
+								<li class="footer-soc-item">
+									<a href="https://www.instagram.com/sysadmin.express/"  target="_blank" rel="noopener nofollow noreferrer" class="footer-soc-link link">
+										<svg class="footer-soc-icon">
+											<use href="./images/icons.svg#icon-instagram">
+											</use> 
+										</svg>
+									</a>
+								</li>
+								<li class="footer-soc-item">
+									<a href="https://twitter.com"  target="_blank" rel="noopener nofollow noreferrer" class="footer-soc-link link">
+										<svg class="footer-soc-icon">
+											<use href="./images/icons.svg#icon-twitter">
+											</use> 
+										</svg>
+									</a>
+								</li>
+								<li class="footer-soc-item">
+									<a href="https://www.facebook.com/SysAdmin.Express"  target="_blank" rel="noopener nofollow noreferrer" class="footer-soc-link link">
+										<svg class="footer-soc-icon">
+											<use href="./images/icons.svg#icon-facebook">
+											</use> 
+										</svg>
+									</a>
+								</li>
+								<li class="footer-soc-item">
+									<a href="https://www.linkedin.com/in/yevheniia-bohdan-428a41236/"  target="_blank" rel="noopener nofollow noreferrer" class="footer-soc-link link">
+										<svg class="footer-soc-icon">
+											<use href="./images/icons.svg#icon-linkedin">
+											</use> 
+										</svg>
+									</a>
+								</li>
+							</ul>							
+						</div>
+			</div>
+	</div>		
 
 </footer>
 		
