--- a/portfolio.html
+++ b/portfolio.html
@@ -34,10 +34,20 @@
 				</nav>
 				<ul class="header-nav list">
 					<li class="nav-item">
-						<a href="mailto:info@devstudio.com" class="header-adres">info@devstudio.com</a>
+						<a href="mailto:info@devstudio.com" class="header-adres mail">
+							<svg class="mail-icon" width="16" height="12">
+								<use href="./images/icons.svg#icon-mail"></use>
+							</svg>
+							info@devstudio.com</a
+						>
 					</li>
 					<li class="nav-item">
-						<a href="tel:+380961111111" class="header-adres">+38 096 111 11 11</a>
+						<a href="tel:+380961111111" class="header-adres tel">
+							<svg class="mail-icon" width="12" height="16">
+								<use href="./images/icons.svg#icon-smartphone"></use>
+							</svg>
+							+38 096 111 11 11</a
+						>
 					</li>
 				</ul>
 			</div>
@@ -57,118 +67,178 @@
 
 					<ul class="portfolio-item">
 						<li class="foto-item list port">
-							<img src="./images/tekhno.jpg" alt="сайт на ноутбуці" width="370" />
-							<div class="port-section">
-								<h2 class="portfolio-title">Технокряк</h2>
-								<p class="portfolio-pretitle">Веб-сайт</p>
-							</div>
+							<a href="" class="port-shad">
+								<img src="./images/tekhno.jpg" alt="сайт на ноутбуці" width="370" />
+								<div class="port-section">
+									<h2 class="portfolio-title">Технокряк</h2>
+									<p class="portfolio-pretitle">Веб-сайт</p>
+								</div>
+							</a>
 						</li>
 						<li class="foto-item list port">
-							<img
-								src="./images/new-orlean.jpg"
-								alt=" два баскетболіста з м‘ячем на фоні розлитої синьої фарбою"
-								width="370"
-							/>
-							<div class="port-section">
-								<h2 class="portfolio-title">
-									Постер
-									<span lang="en">Orlean vs Golden Star</span>
-								</h2>
-								<p class="portfolio-pretitle">Дизайн</p>
-							</div>
+							<a href="" class="port-shad">
+								<img
+									src="./images/new-orlean.jpg"
+									alt=" два баскетболіста з м‘ячем на фоні розлитої синьої фарбою"
+									width="370"
+								/>
+								<div class="port-section">
+									<h2 class="portfolio-title">
+										Постер
+										<span lang="en">Orlean vs Golden Star</span>
+									</h2>
+									<p class="portfolio-pretitle">Дизайн</p>
+								</div></a
+							>
 						</li>
 						<li class="foto-item list port">
-							<img src="./images/seafood.jpg" alt="логотип компанії - назва ресторану на фоні млюнку риби" />
-							<div class="port-section">
-								<h2 class="portfolio-title">
-									Ресторан
-									<span lang="en">Seafood</span>
-								</h2>
-								<p class="portfolio-pretitle">Додаток</p>
-							</div>
+							<a href="" class="port-shad">
+								<img src="./images/seafood.jpg" alt="логотип компанії - назва ресторану на фоні млюнку риби" />
+								<div class="port-section">
+									<h2 class="portfolio-title">
+										Ресторан
+										<span lang="en">Seafood</span>
+									</h2>
+									<p class="portfolio-pretitle">Додаток</p>
+								</div></a
+							>
 						</li>
 						<li class="foto-item list port">
-							<img src="./images/prime.jpg" alt="чорні навушники на білому фоні" width="370" />
-							<div class="port-section">
-								<h2 class="portfolio-title">
-									Проєкт
-									<span lang="en">Prime</span>
-								</h2>
-								<p class="portfolio-pretitle">Маркетинг</p>
-							</div>
+							<a href="" class="port-shad">
+								<img src="./images/prime.jpg" alt="чорні навушники на білому фоні" width="370" />
+								<div class="port-section">
+									<h2 class="portfolio-title">
+										Проєкт
+										<span lang="en">Prime</span>
+									</h2>
+									<p class="portfolio-pretitle">Маркетинг</p>
+								</div></a
+							>
 						</li>
 						<li class="foto-item list port">
-							<img src="./images/boxes.jpg" alt="коробки на білому фоні, одна біла інша оранжова" width="370" />
-							<div class="port-section">
-								<h2 class="portfolio-title">
-									Проєкт
-									<span lang="en">Boxes</span>
-								</h2>
-								<p class="portfolio-pretitle">Додаток</p>
-							</div>
+							<a href="" class="port-shad">
+								<img src="./images/boxes.jpg" alt="коробки на білому фоні, одна біла інша оранжова" width="370" />
+								<div class="port-section">
+									<h2 class="portfolio-title">
+										Проєкт
+										<span lang="en">Boxes</span>
+									</h2>
+									<p class="portfolio-pretitle">Додаток</p>
+								</div></a
+							>
 						</li>
 						<li class="foto-item list port">
-							<img src="./images/borders.jpg" alt="монітор з відкритим сайтом" width="370" />
-							<div class="port-section">
-								<h2 class="portfolio-title" lang="en">Inspiration has no Borders</h2>
-								<p class="portfolio-pretitle">Веб-сайт</p>
-							</div>
+							<a href="" class="port-shad">
+								<img src="./images/borders.jpg" alt="монітор з відкритим сайтом" width="370" />
+								<div class="port-section">
+									<h2 class="portfolio-title" lang="en">Inspiration has no Borders</h2>
+									<p class="portfolio-pretitle">Веб-сайт</p>
+								</div></a
+							>
 						</li>
 						<li class="foto-item list port">
-							<img src="./images/edition.jpg" alt="книга" width="370" />
-							<div class="port-section">
-								<h2 class="portfolio-title">
-									Видання
-									<span lang="en">Limited Edition</span>
-								</h2>
-								<p class="portfolio-pretitle">Дизайн</p>
-							</div>
+							<a href="" class="port-shad">
+								<img src="./images/edition.jpg" alt="книга" width="370" />
+								<div class="port-section">
+									<h2 class="portfolio-title">
+										Видання
+										<span lang="en">Limited Edition</span>
+									</h2>
+									<p class="portfolio-pretitle">Дизайн</p>
+								</div></a
+							>
 						</li>
 						<li class="foto-item list port">
-							<img src="./images/lab.jpg" alt="етікетка-логотип" width="370" />
-							<div class="port-section">
-								<h2 class="portfolio-title">
-									Проект
-									<span lang="en">LAB</span>
-								</h2>
-								<p class="portfolio-pretitle">Маркетинг</p>
-							</div>
+							<a href="" class="port-shad">
+								<img src="./images/lab.jpg" alt="етікетка-логотип" width="370" />
+								<div class="port-section">
+									<h2 class="portfolio-title">
+										Проект
+										<span lang="en">LAB</span>
+									</h2>
+									<p class="portfolio-pretitle">Маркетинг</p>
+								</div></a
+							>
 						</li>
 						<li class="foto-item list port">
-							<img src="./images/business.jpg" alt="сайт відкритий на ноутбуці" width="370" />
-							<div class="port-section">
-								<h2 class="portfolio-title" lang="en">Growing Business</h2>
-								<p class="portfolio-pretitle">Додаток</p>
-							</div>
+							<a href="" class="port-shad">
+								<img src="./images/business.jpg" alt="сайт відкритий на ноутбуці" width="370" />
+								<div class="port-section">
+									<h2 class="portfolio-title" lang="en">Growing Business</h2>
+									<p class="portfolio-pretitle">Додаток</p>
+								</div></a
+							>
 						</li>
 					</ul>
 				</div>
 			</section>
 		</main>
-		<footer class="footer">
-			<div class="container">
-				<a class="logo" href="./index.html">Web<span class="logo-white">Studio</span> </a>
-				<address>
-					<ul class="footer-adres list">
-						<li class="footer-item">
-							<a
-								href="https://goo.gl/maps/RHjdxaCmpPA8mE757"
-								target="_blank"
-								rel="noopener noreferrer"
-								class="karta link"
-							>
-								м. Київ, пр-т Лесі Українки, 26
-							</a>
-						</li>
-						<li class="footer-item">
-							<a href="mailto:info@example.com" class="footer-akcent link">info@example.com</a>
-						</li>
-						<li class="footer-item">
-							<a href="tel:+380991111111" class="footer-akcent link">+38 099 111 11 11</a>
-						</li>
-					</ul>
-				</address>
+		
+<footer class="footer">
+	<div class=" container">
+			<div class="footer-nav-content">
+					<a class="logo" href="./index.html">Web<span class="logo-white">Studio</span> </a>
+					<address>
+						<ul class="footer-adres list">
+							<li class="footer-item">
+								<a
+									href="https://goo.gl/maps/RHjdxaCmpPA8mE757"
+									target="_blank"
+									rel="noopener noreferrer"
+									class="karta"
+								>
+									м. Київ, пр-т Лесі Українки, 26
+								</a>
+							</li>
+							<li class="footer-item">
+								<a href="mailto:info@example.com" class="footer-akcent">info@example.com</a>
+							</li>
+							<li class="footer-item">
+								<a href="tel:+380991111111" class="footer-akcent">+38 099 111 11 11</a>
+							</li>
+						</ul>
+					</address>
 			</div>
-		</footer>
+			<div class="footer-sosial">
+				<h2 class="sosial-title">Приєднуйтесь</h2>
+<ul class="footer-soc list">
+								<li class="footer-soc-item">
+									<a href="https://www.instagram.com/sysadmin.express/"  target="_blank" rel="noopener nofollow noreferrer" class="footer-soc-link link">
+										<svg class="footer-soc-icon">
+											<use href="./images/icons.svg#icon-instagram">
+											</use> 
+										</svg>
+									</a>
+								</li>
+								<li class="footer-soc-item">
+									<a href="https://twitter.com"  target="_blank" rel="noopener nofollow noreferrer" class="footer-soc-link link">
+										<svg class="footer-soc-icon">
+											<use href="./images/icons.svg#icon-twitter">
+											</use> 
+										</svg>
+									</a>
+								</li>
+								<li class="footer-soc-item">
+									<a href="https://www.facebook.com/SysAdmin.Express"  target="_blank" rel="noopener nofollow noreferrer" class="footer-soc-link link">
+										<svg class="footer-soc-icon">
+											<use href="./images/icons.svg#icon-facebook">
+											</use> 
+										</svg>
+									</a>
+								</li>
+								<li class="footer-soc-item">
+									<a href="https://www.linkedin.com/in/yevheniia-bohdan-428a41236/"  target="_blank" rel="noopener nofollow noreferrer" class="footer-soc-link link">
+										<svg class="footer-soc-icon">
+											<use href="./images/icons.svg#icon-linkedin">
+											</use> 
+										</svg>
+									</a>
+								</li>
+							</ul>							
+						</div>
+			</div>
+	</div>		
+
+</footer>
 	</body>
 </html>
