--- a/index.html
+++ b/index.html
@@ -47,15 +47,14 @@
 	</div>
 </header>
 
-			<main>
+	<main>
 	<div class="container-fluid">
-				<section class="section hero-section">
-			<div class="container con-hearo">	
-					<h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
+	<section class="section hero-section">
+		<h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
 					<button type="button" class="button">Замовити послугу</button>
-			</div>	</div>			
-		</section> 
-
+			
+	</section> 
+</div>	
 	
 			<section class="section original">
 				<div class="container con-original">	
@@ -342,7 +341,7 @@
 <li class="clients-item">
 	<a href="" class="clients-link">
 	<svg class="clients-icon">
-		<use href="./images/icons.svg#icon-brand">
+		<use href="./images/icons.svg#icon-band">
 		</use> 
 		</svg>
 	</a>
@@ -350,7 +349,7 @@
 <li class="clients-item">
 	<a href="" class="clients-link">
 	<svg class="clients-icon">
-		<use href="./images/icons.svg#icon-tag">
+		<use href="./images/icons.svg#icon-bag">
 		</use> 
 		</svg>
 	</a>
@@ -422,7 +421,7 @@
 							</ul>							
 						</div>
 			</div>
-	</div>		
+		
 
 </footer>
 		
