--- a/portfolio.html
+++ b/portfolio.html
@@ -173,20 +173,15 @@
 				</div>
 			</section>
 		</main>
-		
-<footer class="footer">
-	<div class=" container">
-			<div class="footer-nav-content">
+
+		<footer class="footer">
+			<div class="container">
+				<div class="footer-nav-content">
 					<a class="logo" href="./index.html">Web<span class="logo-white">Studio</span> </a>
 					<address>
 						<ul class="footer-adres list">
 							<li class="footer-item">
-								<a
-									href="https://goo.gl/maps/RHjdxaCmpPA8mE757"
-									target="_blank"
-									rel="noopener noreferrer"
-									class="karta"
-								>
+								<a href="https://goo.gl/maps/RHjdxaCmpPA8mE757" target="_blank" rel="noopener noreferrer" class="karta">
 									м. Київ, пр-т Лесі Українки, 26
 								</a>
 							</li>
@@ -198,47 +193,61 @@
 							</li>
 						</ul>
 					</address>
+				</div>
+				<div class="footer-sosial">
+					<h2 class="sosial-title">Приєднуйтесь</h2>
+					<ul class="footer-soc list">
+						<li class="footer-soc-item">
+							<a
+								href="https://www.instagram.com/sysadmin.express/"
+								target="_blank"
+								rel="noopener nofollow noreferrer"
+								class="footer-soc-link link"
+							>
+								<svg class="footer-soc-icon">
+									<use href="./images/icons.svg#icon-instagram"></use>
+								</svg>
+							</a>
+						</li>
+						<li class="footer-soc-item">
+							<a
+								href="https://twitter.com"
+								target="_blank"
+								rel="noopener nofollow noreferrer"
+								class="footer-soc-link link"
+							>
+								<svg class="footer-soc-icon">
+									<use href="./images/icons.svg#icon-twitter"></use>
+								</svg>
+							</a>
+						</li>
+						<li class="footer-soc-item">
+							<a
+								href="https://www.facebook.com/SysAdmin.Express"
+								target="_blank"
+								rel="noopener nofollow noreferrer"
+								class="footer-soc-link link"
+							>
+								<svg class="footer-soc-icon">
+									<use href="./images/icons.svg#icon-facebook"></use>
+								</svg>
+							</a>
+						</li>
+						<li class="footer-soc-item">
+							<a
+								href="https://www.linkedin.com/in/yevheniia-bohdan-428a41236/"
+								target="_blank"
+								rel="noopener nofollow noreferrer"
+								class="footer-soc-link link"
+							>
+								<svg class="footer-soc-icon">
+									<use href="./images/icons.svg#icon-linkedin"></use>
+								</svg>
+							</a>
+						</li>
+					</ul>
+				</div>
 			</div>
-			<div class="footer-sosial">
-				<h2 class="sosial-title">Приєднуйтесь</h2>
-<ul class="footer-soc list">
-								<li class="footer-soc-item">
-									<a href="https://www.instagram.com/sysadmin.express/"  target="_blank" rel="noopener nofollow noreferrer" class="footer-soc-link link">
-										<svg class="footer-soc-icon">
-											<use href="./images/icons.svg#icon-instagram">
-											</use> 
-										</svg>
-									</a>
-								</li>
-								<li class="footer-soc-item">
-									<a href="https://twitter.com"  target="_blank" rel="noopener nofollow noreferrer" class="footer-soc-link link">
-										<svg class="footer-soc-icon">
-											<use href="./images/icons.svg#icon-twitter">
-											</use> 
-										</svg>
-									</a>
-								</li>
-								<li class="footer-soc-item">
-									<a href="https://www.facebook.com/SysAdmin.Express"  target="_blank" rel="noopener nofollow noreferrer" class="footer-soc-link link">
-										<svg class="footer-soc-icon">
-											<use href="./images/icons.svg#icon-facebook">
-											</use> 
-										</svg>
-									</a>
-								</li>
-								<li class="footer-soc-item">
-									<a href="https://www.linkedin.com/in/yevheniia-bohdan-428a41236/"  target="_blank" rel="noopener nofollow noreferrer" class="footer-soc-link link">
-										<svg class="footer-soc-icon">
-											<use href="./images/icons.svg#icon-linkedin">
-											</use> 
-										</svg>
-									</a>
-								</li>
-							</ul>							
-						</div>
-			</div>
-	</div>		
-
-</footer>
+		</footer>
 	</body>
 </html>
