--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 							<p class="profesion" lang="en">Product Designer</p>
 							<ul class="com-soc list">
 								<li class="com-soc-item">
-									<a href="https://www.instagram.com/sysadmin.express/"  target="_blank" rel="noopener nofollow noreferrer" class="com-soc-link link">
+									<a href="https://www.instagram.com/"  target="_blank" rel="noopener nofollow noreferrer" class="com-soc-link link">
 										<svg class="com-soc-icon">
 											<use href="./images/icons.svg#icon-instagram">
 											</use> 
@@ -156,7 +156,7 @@
 									</a>
 								</li>
 								<li class="com-soc-item">
-									<a href="https://www.facebook.com/SysAdmin.Express"  target="_blank" rel="noopener nofollow noreferrer" class="com-soc-link link">
+									<a href="https://www.facebook.com/"  target="_blank" rel="noopener nofollow noreferrer" class="com-soc-link link">
 										<svg class="com-soc-icon">
 											<use href="./images/icons.svg#icon-facebook">
 											</use> 
@@ -164,7 +164,7 @@
 									</a>
 								</li>
 								<li class="com-soc-item">
-									<a href="https://www.linkedin.com/in/yevheniia-bohdan-428a41236/"  target="_blank" rel="noopener nofollow noreferrer" class="com-soc-link link">
+									<a href="https://www.linkedin.com/"  target="_blank" rel="noopener nofollow noreferrer" class="com-soc-link link">
 										<svg class="com-soc-icon">
 											<use href="./images/icons.svg#icon-linkedin">
 											</use> 
@@ -181,7 +181,7 @@
 							<p class="profesion" lang="en">Frontend Developer</p>
 							<ul class="com-soc list">
 								<li class="com-soc-item">
-									<a href="https://www.instagram.com/sysadmin.express/"  target="_blank" rel="noopener nofollow noreferrer" class="com-soc-link link">
+									<a href="https://www.instagram.com/"  target="_blank" rel="noopener nofollow noreferrer" class="com-soc-link link">
 										<svg class="com-soc-icon">
 											<use href="./images/icons.svg#icon-instagram">
 											</use> 
@@ -197,7 +197,7 @@
 									</a>
 								</li>
 								<li class="com-soc-item">
-									<a href="https://www.facebook.com/SysAdmin.Express"  target="_blank" rel="noopener nofollow noreferrer" class="com-soc-link link">
+									<a href="https://www.facebook.com/"  target="_blank" rel="noopener nofollow noreferrer" class="com-soc-link link">
 										<svg class="com-soc-icon">
 											<use href="./images/icons.svg#icon-facebook">
 											</use> 
@@ -205,7 +205,7 @@
 									</a>
 								</li>
 								<li class="com-soc-item">
-									<a href="https://www.linkedin.com/in/yevheniia-bohdan-428a41236/"  target="_blank" rel="noopener nofollow noreferrer" class="com-soc-link link">
+									<a href="https://www.linkedin.com/"  target="_blank" rel="noopener nofollow noreferrer" class="com-soc-link link">
 										<svg class="com-soc-icon">
 											<use href="./images/icons.svg#icon-linkedin">
 											</use> 
@@ -222,7 +222,7 @@
 							<p class="profesion" lang="en">Marketing</p>
 							<ul class="com-soc list">
 								<li class="com-soc-item">
-									<a href="https://www.instagram.com/sysadmin.express/"  target="_blank" rel="noopener nofollow noreferrer" class="com-soc-link link">
+									<a href="https://www.instagram.com/"  target="_blank" rel="noopener nofollow noreferrer" class="com-soc-link link">
 										<svg class="com-soc-icon">
 											<use href="./images/icons.svg#icon-instagram">
 											</use> 
@@ -238,7 +238,7 @@
 									</a>
 								</li>
 								<li class="com-soc-item">
-									<a href="https://www.facebook.com/SysAdmin.Express"  target="_blank" rel="noopener nofollow noreferrer" class="com-soc-link link">
+									<a href="https://www.facebook.com/"  target="_blank" rel="noopener nofollow noreferrer" class="com-soc-link link">
 										<svg class="com-soc-icon">
 											<use href="./images/icons.svg#icon-facebook">
 											</use> 
@@ -246,7 +246,7 @@
 									</a>
 								</li>
 								<li class="com-soc-item">
-									<a href="https://www.linkedin.com/in/yevheniia-bohdan-428a41236/"  target="_blank" rel="noopener nofollow noreferrer" class="com-soc-link link">
+									<a href="https://www.linkedin.com/"  target="_blank" rel="noopener nofollow noreferrer" class="com-soc-link link">
 										<svg class="com-soc-icon">
 											<use href="./images/icons.svg#icon-linkedin">
 											</use> 
@@ -263,7 +263,7 @@
 							<p class="profesion" lang="en">UI Designer</p>
 							<ul class="com-soc list">
 								<li class="com-soc-item">
-									<a href="https://www.instagram.com/sysadmin.express/"  target="_blank" rel="noopener nofollow noreferrer" class="com-soc-link link">
+									<a href="https://www.instagram.com/"  target="_blank" rel="noopener nofollow noreferrer" class="com-soc-link link">
 										<svg class="com-soc-icon">
 											<use href="./images/icons.svg#icon-instagram">
 											</use> 
@@ -279,7 +279,7 @@
 									</a>
 								</li>
 								<li class="com-soc-item">
-									<a href="https://www.facebook.com/SysAdmin.Express"  target="_blank" rel="noopener nofollow noreferrer" class="com-soc-link link">
+									<a href="https://www.facebook.com/"  target="_blank" rel="noopener nofollow noreferrer" class="com-soc-link link">
 										<svg class="com-soc-icon">
 											<use href="./images/icons.svg#icon-facebook">
 											</use> 
@@ -287,7 +287,7 @@
 									</a>
 								</li>
 								<li class="com-soc-item">
-									<a href="https://www.linkedin.com/in/yevheniia-bohdan-428a41236/"  target="_blank" rel="noopener nofollow noreferrer" class="com-soc-link link">
+									<a href="https://www.linkedin.com/"  target="_blank" rel="noopener nofollow noreferrer" class="com-soc-link link">
 										<svg class="com-soc-icon">
 											<use href="./images/icons.svg#icon-linkedin">
 											</use> 
