--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
 				<h2 class="sosial-title">Приєднуйтесь</h2>
 <ul class="footer-soc list">
 								<li class="footer-soc-item">
-									<a href="https://www.instagram.com/sysadmin.express/"  target="_blank" rel="noopener nofollow noreferrer" class="footer-soc-link link">
+									<a href="https://www.instagram.com/"  target="_blank" rel="noopener nofollow noreferrer" class="footer-soc-link link">
 										<svg class="footer-soc-icon">
 											<use href="./images/icons.svg#icon-instagram">
 											</use> 
@@ -403,7 +403,7 @@
 									</a>
 								</li>
 								<li class="footer-soc-item">
-									<a href="https://www.facebook.com/SysAdmin.Express"  target="_blank" rel="noopener nofollow noreferrer" class="footer-soc-link link">
+									<a href="https://www.facebook.com/"  target="_blank" rel="noopener nofollow noreferrer" class="footer-soc-link link">
 										<svg class="footer-soc-icon">
 											<use href="./images/icons.svg#icon-facebook">
 											</use> 
@@ -411,7 +411,7 @@
 									</a>
 								</li>
 								<li class="footer-soc-item">
-									<a href="https://www.linkedin.com/in/yevheniia-bohdan-428a41236/"  target="_blank" rel="noopener nofollow noreferrer" class="footer-soc-link link">
+									<a href="https://www.linkedin.com/"  target="_blank" rel="noopener nofollow noreferrer" class="footer-soc-link link">
 										<svg class="footer-soc-icon">
 											<use href="./images/icons.svg#icon-linkedin">
 											</use> 
