--- a/portfolio.html
+++ b/portfolio.html
@@ -199,7 +199,7 @@
 					<ul class="footer-soc list">
 						<li class="footer-soc-item">
 							<a
-								href="https://www.instagram.com/sysadmin.express/"
+								href="https://www.instagram.com/"
 								target="_blank"
 								rel="noopener nofollow noreferrer"
 								class="footer-soc-link link"
@@ -223,7 +223,7 @@
 						</li>
 						<li class="footer-soc-item">
 							<a
-								href="https://www.facebook.com/SysAdmin.Express"
+								href="https://www.facebook.com/"
 								target="_blank"
 								rel="noopener nofollow noreferrer"
 								class="footer-soc-link link"
@@ -235,7 +235,7 @@
 						</li>
 						<li class="footer-soc-item">
 							<a
-								href="https://www.linkedin.com/in/yevheniia-bohdan-428a41236/"
+								href="https://www.linkedin.com/"
 								target="_blank"
 								rel="noopener nofollow noreferrer"
 								class="footer-soc-link link"
